objects/Billing_Schedule__c/Billing_Schedule__c.object-meta.xml
<CustomObject>
    <description>Used to store billing information rolled up from the Opportunity Products</description>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>