objects/Billing_Schedule__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>