objects/Billing_Schedule__c/fields/Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount__c</fullName>
    <description>Billing Amount</description>
    <inlineHelpText>Gross amount we are invoicing customers</inlineHelpText>
    <label>Billing Amount (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>