objects/Billing_Schedule__c/fields/Billing_Amount_Net_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_Net_Rollup__c</fullName>
    <inlineHelpText>Net cash to Tanium after any partner fees</inlineHelpText>
    <label>Billing Amount (Net) Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>