objects/Billing_Schedule__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Billing Date</description>
    <label>Estimated Invoice Date</label>
    <type>Date</type>
</CustomField>