objects/Billing_Schedule__c/fields/Billing_Order__c.field-meta.xml
<CustomField>
    <fullName>Billing_Order__c</fullName>
    <label>Billing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>