objects/Billing_Schedule__c/fields/BS_18ID__c.field-meta.xml
<CustomField>
    <fullName>BS_18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>BS 18ID</label>
    <type>Text</type>
</CustomField>