objects/Billing_Schedule__c/fields/Commission_Exception__c.field-meta.xml
<CustomField>
    <fullName>Commission_Exception__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Adjustment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>