objects/Billing_Schedule__c/fields/Day_of_Quarter_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Quarter_Invoiced__c</fullName>
    <formula>Invoice_Date__c- 
DATE( 
YEAR(Invoice_Date__c), 
MONTH(Invoice_Date__c), 
1 
) 
+ 

CASE( 
MONTH( Invoice_Date__c), 
1,62, 
2,1, 
3,29, 
4,60, 
5,1, 
6,32, 
7,62, 
8,1, 
9,32, 
10,62, 
11,1, 
12,31, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Quarter Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>