objects/Billing_Schedule__c/fields/Day_of_Year_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Year_Invoiced__c</fullName>
    <formula>Invoice_Date__c- 
DATE( 
YEAR(Invoice_Date__c), 
MONTH(Invoice_Date__c), 
1 
) 
+ 

CASE( 
MONTH( Invoice_Date__c), 
4,61, 
5,92, 
6,121, 
7,152, 
8,182, 
9,213, 
10,243, 
11,274, 
12,305, 
1,335, 
2,1, 
3,30, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Year Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>