objects/Billing_Schedule__c/fields/Diff__c.field-meta.xml
<CustomField>
    <fullName>Diff__c</fullName>
    <formula>Billing_Date__c - Opportunity_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>