objects/Billing_Schedule__c/fields/ELV_Order__c.field-meta.xml
<CustomField>
    <fullName>ELV_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>