objects/Billing_Schedule__c/fields/ELV_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Legacy Quote record.</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>ELV_Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>