objects/Billing_Schedule__c/fields/Estimated_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payment_Date__c</fullName>
    <description>Estimated Payment Date</description>
    <formula>CASE( Opportunity__r.Payment_Term__c,&quot;Net 30&quot;, Invoice_Date__c + 30 ,&quot;Net 45&quot;,Invoice_Date__c + 45 ,&quot;Net 60&quot;,Invoice_Date__c + 60,&quot;Net 75&quot;,Invoice_Date__c + 75,&quot;Net 85&quot;,Invoice_Date__c + 85,&quot;Net 90&quot;,Invoice_Date__c + 90,&quot;Net 120&quot;,Invoice_Date__c + 120,Invoice_Date__c + 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Payment Date</inlineHelpText>
    <label>Estimated Payment Date</label>
    <type>Date</type>
</CustomField>