objects/Billing_Schedule__c/fields/EstimatedInvoiceDateOrder1__c.field-meta.xml
<CustomField>
    <fullName>EstimatedInvoiceDateOrder1__c</fullName>
    <description>Billing Schedule Estimated Invoice Date for Billing Order 1</description>
    <label>Estimated Invoice Date - Order 1</label>
    <type>Date</type>
</CustomField>