objects/Billing_Schedule__c/fields/EstimatedPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPaymentDate__c</fullName>
    <description>If no invoice attached to billing schedule, then default is Invoice_date__c+90 else calculated using Invoice__c.InvoicePaymentTerm__c.</description>
    <label>Estimated Payment Date (new)</label>
    <type>Date</type>
</CustomField>