objects/Billing_Schedule__c/fields/FB__c.field-meta.xml
<CustomField>
    <fullName>FB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB</label>
    <type>Checkbox</type>
</CustomField>