objects/Billing_Schedule__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>calculated by apex class - InvoiceLinkToBillingSchedule</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>