objects/Billing_Schedule__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Invoice Date</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>