objects/Billing_Schedule__c/fields/Invoice_Date_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Close_Date__c</fullName>
    <description>Estimated Invoice Date - Close Date</description>
    <formula>Billing_Date__c - Opportunity_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Invoice Date - Close Date</inlineHelpText>
    <label>Invoice Date - Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>