objects/Billing_Schedule__c/fields/Invoice_Date_Diff__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Diff__c</fullName>
    <formula>IF( Billing_Date__c = Invoice_Date__c ,FALSE,TRUE)</formula>
    <label>Invoice Date Diff</label>
    <type>Checkbox</type>
</CustomField>