objects/Billing_Schedule__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice Number</description>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>