objects/Billing_Schedule__c/fields/Invoicing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Notes__c</fullName>
    <description>Notes on Invoicing</description>
    <inlineHelpText>Notes on Invoicing</inlineHelpText>
    <label>Invoicing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>