objects/Billing_Schedule__c/fields/isPrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryQuote__c</fullName>
    <description>Indicates if attached quote is primary or not</description>
    <formula>ELV_Quote__r.Ruby__IsPrimaryQuote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if attached quote is primary or not</inlineHelpText>
    <label>isPrimaryQuote</label>
    <type>Checkbox</type>
</CustomField>