objects/Billing_Schedule__c/fields/isReverseBilling__c.field-meta.xml
<CustomField>
    <fullName>isReverseBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if reverse billing was used for billing amount calculations</inlineHelpText>
    <label>is Reverse Billing</label>
    <type>Checkbox</type>
</CustomField>