objects/Billing_Schedule__c/fields/MonthsFromEstimatedInvoiceDateOrder1__c.field-meta.xml
<CustomField>
    <fullName>MonthsFromEstimatedInvoiceDateOrder1__c</fullName>
    <formula>((YEAR( Billing_Date__c ) - YEAR( EstimatedInvoiceDateOrder1__c ))*12) + (MONTH(Billing_Date__c) - MONTH(EstimatedInvoiceDateOrder1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculate the months between the estimated invoice date (MM-YY) and the Order 1 estimated invoice date (MM-YY) ignoring the day of the month</inlineHelpText>
    <label>MonthsFromEstimatedInvoiceDate - Order1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>