objects/Billing_Schedule__c/fields/MSFT_Metered_Billing_Invoice__c.field-meta.xml
<CustomField>
    <fullName>MSFT_Metered_Billing_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Quoting Operations to mark a Billing Schedule as metered. SS-9251sed by Quoting Operations to mark a Billing Schedule as metered. SS-9251</description>
    <label>MSFT Metered Billing Invoice</label>
    <type>Checkbox</type>
</CustomField>