objects/Billing_Schedule__c/fields/Net_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Billing_Amount__c</fullName>
    <description>SS-12386: updated formula to remove dependencies on field that will be deleted.</description>
    <formula>IF( No_Commission__c = TRUE,Billing_Amount__c,IF ( Commission_Exception__c &gt;0,Billing_Amount__c- Commission_Exception__c ,Billing_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Amount (Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>