objects/Billing_Schedule__c/fields/No_Commission__c.field-meta.xml
<CustomField>
    <fullName>No_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Commission</label>
    <type>Checkbox</type>
</CustomField>