objects/Billing_Schedule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>