objects/Billing_Schedule__c/fields/Per_of_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_of_Quote_Amount__c</fullName>
    <description>Billing amount as Quote amount %</description>
    <formula>IF(Opportunity__r.Amount = 0 ,0,Net_Billing_Amount__c / Opportunity__r.Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billing amount as Quote amount %</inlineHelpText>
    <label>% of Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>