objects/Billing_Schedule__c/fields/PO_Required_for_Committed_Billing__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_for_Committed_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Required for Committed Billing</label>
    <type>Checkbox</type>
</CustomField>