objects/Billing_Schedule__c/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <formula>Invoice__r.InvoicePONumber__c</formula>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>