objects/Billing_Schedule__c/fields/QuotePaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>QuotePaymentTerms__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(ELV_Quote__r.Ruby__PaymentTerm__c))),TEXT(ELV_Quote__r.Ruby__PaymentTerm__c),&apos;&apos;)</formula>
    <label>Quote Payment Terms</label>
    <type>Text</type>
</CustomField>