objects/Billing_Schedule__c/fields/ReconciliationSemiMatchReason__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationSemiMatchReason__c</fullName>
    <formula>Invoice__r.ReconciliationSemiMatchReason__c</formula>
    <label>Reconciliation Semi Match Reason</label>
    <type>Text</type>
</CustomField>