objects/Billing_Schedule__c/fields/ReconciliationStatus__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationStatus__c</fullName>
    <formula>TEXT(Invoice__r.ReconciliationStatus__c )</formula>
    <label>Reconciliation Status</label>
    <type>Text</type>
</CustomField>