objects/Billing_Schedule__c/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>