objects/Billing_Schedule__c/fields/Send_PO_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_PO_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PO Email</label>
    <type>Checkbox</type>
</CustomField>